# pgen

./: .editorconfig  Cargo.toml  README.md  out.txt
ordmap/: Cargo.toml
ordmap/src/: lib.rs
proptest-regressions/: ordmap.txt
src/: grammar.rs  items.rs  lib.rs  main.rs  ordmap.rs  parser.rs  this.rs  utils.rs
wtf/: Cargo.toml
wtf/src/: lib.rs  main.rs
